// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Link /> calls helpers and renders correctly with external 1`] = `
<a
  className="link link-white"
  href="/cabinet/"
  target="_blank"
>
  TestLink
</a>
`;

exports[`<Link /> calls helpers and renders correctly with pseudo 1`] = `
<a
  className="link link-black link-can-be-hovered link-underlined link-underlined-dashed"
  href="/auth/"
>
  TestLink
</a>
`;

exports[`<Link /> calls helpers with right params and renders correctly without external 1`] = `
<a
  className="testClass link link-white link-underlined link-underlined-solid"
  href="/cart/"
  relative={true}
  target="_blank"
>
  TestLink
</a>
`;
